# rgbxmastree

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  unit_tests.yml
examples/: huecycle.py  onebyone.py  randomsparkles.py  rgb.py
src/rgbxmastree/: __init__.py  cli.py  tree.py
src/rgbxmastree/commands/: color_shuffle.py
tests/commands/: test_cli.py  test_color_shuffle.py
tests/tree/: test_RGBXmasTree.py
